tests/Rules/Structure/Fixtures/valid/headings_ok_more.html.twig
<h1>Main</h1>
<h2>Sub</h2>
<h2>Another sub</h2>
<H3>Subsub</H3>
