tests/Rules/Structure/Fixtures/invalid/headings_jump.html.twig
<h1>Main</h1>
<h3>Jumped</h3>
